syntax = "proto3";

option go_package = "./pb";

package techschool.proto;

import "proto/memory_message.proto";

// Filter used to search laptop for different category
message Filter {
    double max_price_usd = 1;
    uint32 min_cpu_cores = 2;
    double min_cpu_ghz = 3;
    Memory min_ram = 4;
}