syntax = "proto3";

option go_package = "./pb";

//option go_package = "github.com/menggus/micro-service/pb;pb";  ?????????

package techschool.proto;

import "proto/filter_message.proto";
import "proto/laptop_message.proto";


service LaptopService {
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
    rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {};
}

message CreateLaptopRequest {
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string id = 1;
}

message SearchLaptopRequest {
    Filter filter = 1;
}

message SearchLaptopResponse {
    Laptop laptop = 1;
}



